--- a/Application/PI-Replication-Tool.csproj
+++ b/Application/PI-Replication-Tool.csproj
@@ -109,12 +109,12 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Core\AsyncCommand.cs" />
+    <Compile Include="Commands\AsyncCommand.cs" />
     <Compile Include="Core\EventArgs.cs" />
     <Compile Include="Core\EventRaiser.cs" />
     <Compile Include="Core\IErrorHandler.cs" />
     <Compile Include="Core\Mediator.cs" />
-    <Compile Include="Core\RelayCommand.cs" />
+    <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Core\TaskUtilities.cs" />
     <Compile Include="MVVM\Models\PIAttributesUpdateManager.cs" />
     <Compile Include="MVVM\Models\PIConnectionManager.cs" />
