--- a/Application/PI-Replication-Tool.csproj
+++ b/Application/PI-Replication-Tool.csproj
@@ -117,10 +117,11 @@
     <Compile Include="Core\Mediator.cs" />
     <Compile Include="Core\RelayCommand.cs" />
     <Compile Include="Core\TaskUtilities.cs" />
+    <Compile Include="MVVM\Models\Constantes.cs" />
+    <Compile Include="MVVM\Models\FilesManager.cs" />
     <Compile Include="MVVM\Models\PIAttributesUpdateManager.cs" />
     <Compile Include="MVVM\Models\PIConnectionManager.cs" />
     <Compile Include="MVVM\Models\PIReplicationManager.cs" />
-    <Compile Include="MVVM\Models\TagsReportGenerator.cs" />
     <Compile Include="MVVM\ViewModels\BaseViewModel.cs" />
     <Compile Include="MVVM\ViewModels\ConnectionViewModel.cs" />
     <Compile Include="MVVM\ViewModels\IPageViewModel.cs" />
