verification securité bouton connect ok

--- a/Application/PI-Replication-Tool.csproj
+++ b/Application/PI-Replication-Tool.csproj
@@ -99,6 +99,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="MVVM\Models\PiPoints.cs" />
     <Compile Include="Stores\NavigationStore.cs" />
     <Page Include="MVVM\Themes\ConnectionCard.xaml">
       <SubType>Designer</SubType>
@@ -119,7 +120,7 @@
     <Compile Include="Core\Mediator.cs" />
     <Compile Include="Commands\RelayCommand.cs" />
     <Compile Include="Core\TaskUtilities.cs" />
-    <Compile Include="MVVM\Models\Constantes.cs" />
+    <Compile Include="MVVM\Models\Constants.cs" />
     <Compile Include="MVVM\Models\FilesManager.cs" />
     <Compile Include="MVVM\Models\PIAttributesUpdateManager.cs" />
     <Compile Include="MVVM\Models\PIConnectionManager.cs" />
