--- a/Application/packages.config
+++ b/Application/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="MaterialDesignColors" version="2.0.4" targetFramework="net48" />
   <package id="MaterialDesignThemes" version="4.3.0" targetFramework="net48" />
-  <package id="NLog" version="4.7.13" targetFramework="net48" />
+  <package id="NLog" version="4.7.14" targetFramework="net48" />
+  <package id="NLog.Config" version="4.7.14" targetFramework="net48" />
+  <package id="NLog.Schema" version="4.7.14" targetFramework="net48" />
 </packages>
