--- a/Application/PI-Replication-Tool.csproj
+++ b/Application/PI-Replication-Tool.csproj
@@ -101,7 +101,7 @@
     </ApplicationDefinition>
     <Compile Include="Core\NLogMemorityTarget.cs" />
     <Compile Include="Core\TotalEnergiesInfra.cs" />
-    <Compile Include="MVVM\Models\PIPoint.cs" />
+    <Compile Include="MVVM\Models\PIPointGridFormat.cs" />
     <Compile Include="Stores\NavigationStore.cs" />
     <Page Include="MVVM\Themes\ConnectionCard.xaml">
       <SubType>Designer</SubType>
