Ajout des images

--- a/Application/PI-Replication-Tool.csproj
+++ b/Application/PI-Replication-Tool.csproj
@@ -208,6 +208,8 @@
     </Resource>
   </ItemGroup>
   <ItemGroup>
+    <Resource Include="Assets\check.png" />
+    <Resource Include="Assets\cross.png" />
     <Content Include="Assets\Spinner.svg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
