add IsThereEnoughtPointSourcesAvailable function

--- a/Application/App.config
+++ b/Application/App.config
@@ -15,6 +15,9 @@
     
     <add key="PISecurityConfiguration" value="piadmin: A(r,w) | piadmins: A(r,w) | PI_Users_Read_Only: A(r) | PI_Users_Read_Write: A(r,w) | PI_Administrators: A(r,w) | PI_Analytics: A(r,w) | PI_Applications: A(r,w) | PI_Assetframework: A(r) | PI_Buffer: A(r,w) | PI_Interfaces: A(r) | PI_Notifications: A(r) | PI_Perfmon: A() | PI_Vision: A(r) | PIWorld: A()"/>
     
+    <add key="NumericalMaxPointCountAllowed" value="20000"/>
+    <add key="DigitalMaxPointCountAllowed" value="10000"/>
+    
     <add key="" value=""/>
   </appSettings>
 </configuration>
