app.config fixed + Resources folder now contain files out of MVVM

--- a/Application/App.config
+++ b/Application/App.config
@@ -1,100 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <sectionGroup name="AppSectionGroup">
-      <section name="Trigrams" type="System.Configuration.Trigrams,System" />
+  <!--<configSections>
+    <sectionGroup name="PIReplicationTool">
+      <section name="Trigrams" type="System.Configuration.AppSettingSection, System.Configuration" />
+      <section name="Trigrams" type="ConsoleApp.MyConfigurationSection, ConsoleApp" />
     </sectionGroup>
-  </configSections>
-
+  </configSections> -->
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
 
   <appSettings>
-    <add key="OutputPath" value="C:\PIReplicationTool\Output\"/>
-    <add key="InputPath" value="C:\PIReplicationTool\Input\"/>
+    <add key="OutputPath" value="C:\PIReplicationTool\Output\" />
+    <add key="InputPath" value="C:\PIReplicationTool\Input\" />
+    <add key="InputFileName" value="input.txt" />
+    <add key="OutputFileName_SourceTags" value="SourceTags" />
+    <add key="OutputFileName_TargetTags" value="TargetTags" />
+    <add key="fieldSeparator" value=";" />
+    <add key="PISecurityConfiguration" value="piadmin: A(r,w) | piadmins: A(r,w) | PI_Users_Read_Only: A(r) | PI_Users_Read_Write: A(r,w) | PI_Administrators: A(r,w) | PI_Analytics: A(r,w) | PI_Applications: A(r,w) | PI_Assetframework: A(r) | PI_Buffer: A(r,w) | PI_Interfaces: A(r) | PI_Notifications: A(r) | PI_Perfmon: A() | PI_Vision: A(r) | PIWorld: A()" />
+    <add key="NumericalMaxPointCountAllowed" value="20000" />
+    <add key="DigitalMaxPointCountAllowed" value="10000" />
 
-    <add key="InputFileName" value="input.txt"/>
-    <add key="OutputFileName_SourceTags" value="SourceTags"/>
-    <add key="OutputFileName_TargetTags" value="TargetTags"/>
-
-    <add key="fieldSeparator" value=';'/>
-
-    <add key="PISecurityConfiguration" value="piadmin: A(r,w) | piadmins: A(r,w) | PI_Users_Read_Only: A(r) | PI_Users_Read_Write: A(r,w) | PI_Administrators: A(r,w) | PI_Analytics: A(r,w) | PI_Applications: A(r,w) | PI_Assetframework: A(r) | PI_Buffer: A(r,w) | PI_Interfaces: A(r) | PI_Notifications: A(r) | PI_Perfmon: A() | PI_Vision: A(r) | PIWorld: A()"/>
-
-    <add key="NumericalMaxPointCountAllowed" value="20000"/>
-    <add key="DigitalMaxPointCountAllowed" value="10000"/>
-
-    <add key="" value=""/>
+    <!--TRIGRAM KEYS-->
+    <!--TEP Pau-->
+    <add key="Trigram_PI-CENTER-HQ" value="" />
+    <!--TEP Angola-->
+    <add key="Trigram_AOEPTTA-APPIL01" value="LAD" />
+    <add key="Trigram_AOEPPAZ-APPIP01" value="PAZ" />
+    <add key="Trigram_AOEPGIR-APPIG01" value="GIR" />
+    <add key="Trigram_AOEPDAL-APPID02" value="DAL" />
+    <add key="Trigram_AOEPCLV-APPIC02" value="CLV" />
+    <!--TEP Austral-->
+    <add key="Trigram_AREPAGU-APPI01" value="AGU" />
+    <add key="Trigram_AREPBUE-APPI01" value="BUE" />
+    <add key="Trigram_AREPCAL-APPI01" value="CAL" />
+    <add key="Trigram_AREPLLY-APPI01" value="LLY" />
+    <add key="Trigram_AREPRCU-APPI01" value="RCU" />
+    <!--TEP Bolivia-->
+    <add key="Trigram_BOEPSRZ-APPI01" value="SRZ" />
+    <!--TEP Brazil-->
+    <add key="Trigram_BREPRIO-APPI01" value="RIO" />
+    <add key="Trigram_BREPLAP-APPI01" value="LAP" />
+    <!--TEP Brunei-->
+    <add key="Trigram_BNEPLUM-AP05" value="BNP" />
+    <!--TEP Congo-->
+    <add key="Trigram_CGEPBIN-APPI04" value="PNR" />
+    <!--TEP Danemark-->
+    <add key="Trigram_PI-DA-EBJ-DK" value="EBJ" />
+    <!--TEP Gabon-->
+    <add key="Trigram_GAEPPOG-PIS01" value="POG" />
+    <!--TEP Italy-->
+    <add key="Trigram_ITEPCOR-AP03" value="COR" />
+    <!--TEP Myanmar-->
+    <add key="Trigram_MMEPRGN-APPI01" value="RGN" />
+    <add key="Trigram_MMEPYDN-APPI01" value="YDN" />
+    <!--TEP Netherland-->
+    <add key="Trigram_NL-DHG-PI" value="DHG" />
+    <!--TEP Nigeria DW-->
+    <add key="Trigram_AKPO-OPS-COLLECTIVE2" value="AKP" />
+    <add key="Trigram_NGEPEGN-APPIS01" value="EGN" />
+    <add key="Trigram_NGEPLOS-APPIS01" value="LOS" />
+    <!--TEP Nigeria JV-->
+    <add key="Trigram_NGEPAMQ-APPI01" value="AMQ" />
+    <add key="Trigram_NGEPOBG-AP02" value="OBG" />
+    <add key="Trigram_NGEPPHC-APPI01" value="PHC" />
+    <!--TEP Norvege-->
+    <add key="Trigram_NOEPSVG-APPI02" value="SVG" />
+    <!--TEP Qatar-->
+    <add key="Trigram_PI-DA-DOH-QA" value="DOH" />
+    <!--TEP United Kingdom-->
+    <add key="Trigram_UK-ABZ-MIS" value="ABZ" />
   </appSettings>
-
-  <AppSectionGroup>
-    <Trigrams>
-      <add key="PI-CENTER-HQ" value="" />
-
-      <!--TEP Angola-->
-      <add key="AOEPTTA-APPIL01" value="LAD" />
-      <add key="AOEPPAZ-APPIP01" value="PAZ" />
-      <add key="AOEPGIR-APPIG01" value="GIR" />
-      <add key="AOEPDAL-APPID02" value="DAL" />
-      <add key="AOEPCLV-APPIC02" value="CLV" />
-
-      <!--TEP Austral-->
-      <add key="AREPAGU-APPI01" value="AGU" />
-      <add key="AREPBUE-APPI01" value="BUE" />
-      <add key="AREPCAL-APPI01" value="CAL" />
-      <add key="AREPLLY-APPI01" value="LLY" />
-      <add key="AREPRCU-APPI01" value="RCU" />
-
-      <!--TEP Bolivia-->
-      <add key="BOEPSRZ-APPI01" value="SRZ" />
-
-      <!--TEP Brazil-->
-      <add key="BREPRIO-APPI01" value="RIO" />
-      <add key="BREPLAP-APPI01" value="LAPA" />
-
-      <!--TEP Brunei-->
-      <add key="BNEPLUM-AP05" value="BNP" />
-
-      <!--TEP Congo-->
-      <add key="CGEPBIN-APPI04" value="PNR" />
-
-      <!--TEP Danemark-->
-      <add key="PI-DA-EBJ-DK" value="EBJ" />
-
-      <!--TEP Gabon-->
-      <add key="GAEPPOG-PIS01" value="POG" />
-
-      <!--TEP Italy-->
-      <add key="ITEPCOR-AP03" value="COR" />
-
-      <!--TEP Myanmar-->
-      <add key="MMEPRGN-APPI01" value="RGN" />
-      <add key="MMEPYDN-APPI01" value="YDN" />
-
-      <!--TEP Netherland-->
-      <add key="NL-DHG-PI" value="DHG" />
-      
-      <!--TEP Nigeria DW-->
-      <add key="AKPO-OPS-COLLECTIVE2" value="AKP" />
-      <add key="NGEPEGN-APPIS01" value="EGN" />
-      <add key="NGEPLOS-APPIS01" value="LOS" />
-      
-      <!--TEP Nigeria JV-->
-      <add key="NGEPAMQ-APPI01" value="AMQ" />
-      <add key="NGEPOBG-AP02" value="OBG" />
-      <add key="NGEPPHC-APPI01" value="PHC" />
-      
-      <!--TEP Norvege-->
-      <add key="NOEPSVG-APPI02" value="SVG" />
-      
-      <!--TEP Qatar-->
-      <add key="PI-DA-DOH-QA" value="DOH" />
-      
-      <!--TEP United Kingdom-->
-      <add key="UK-ABZ-MIS" value="ABZ" /> 
-
-    </Trigrams>
-  </AppSectionGroup>
-
 </configuration>
