relaycommand updateAttributes + appel getTrigram OK, correction clear en cours

--- a/Application/App.config
+++ b/Application/App.config
@@ -21,12 +21,14 @@
     <add key="NumericalMaxPointCountAllowed" value="20000" />
     <add key="DigitalMaxPointCountAllowed" value="10000" />
 
+	<!--TODO: Faire les sections propre pour les trigrammes-->
     <!--TRIGRAM KEYS-->
     <!--TEP Pau-->
     <add key="Trigram_PI-CENTER-HQ" value="" />
     <!--TEP Angola-->
     <add key="Trigram_AOEPTTA-APPIL01" value="LAD" />
     <add key="Trigram_AOEPPAZ-APPIP01" value="PAZ" />
+	<add key="Trigram_PI-DA-PAZ-AO" value="PAZ" />
     <add key="Trigram_AOEPGIR-APPIG01" value="GIR" />
     <add key="Trigram_AOEPDAL-APPID02" value="DAL" />
     <add key="Trigram_AOEPCLV-APPIC02" value="CLV" />
