current values grid WIP

--- a/Application/App.config
+++ b/Application/App.config
@@ -80,6 +80,7 @@
     <add key="Trigram_NL-DHG-PI"        value="DHG" />
     <add key="Trigram_NLEPDHG-PI01"     value="DHG" />
     <add key="Trigram_NLEPDHG-PI02"     value="DHG" />
+    <add key ="Tag_Prefixe_DHG" value ="NL_"/>
     <!--TEP Nigeria DW-->
     <add key="Trigram_PI-DA-AKP-NG"     value="AKP" />
     <add key="Trigram_AKPO-OPS-COLLECTIVE2" value="AKP" />
