--- a/Application/App.config
+++ b/Application/App.config
@@ -13,11 +13,12 @@
 	<appSettings>
 		<add key="OutputPath" value="C:\PIReplicationTool\Output\" />
 		<add key="InputPath" value="C:\PIReplicationTool\Input\" />
+		<add key="LogPath" value="C:\PIReplicationTool\Output\Log" />
 		<add key="InputFileName" value="input.txt" />
 		<add key="OutputFileName_SourceTags" value="SourceTags" />
 		<add key="OutputFileName_TargetTags" value="TargetTags" />
 		<add key="fieldSeparator" value=";" />
-		<add key="PISecurityConfiguration" value="piadmin: A(r,w) | piadmins: A(r,w) | PI_Users_Read_Only: A(r) | PI_Users_Read_Write: A(r,w) | PI_Administrators: A(r,w) | PI_Analytics: A(r,w) | PI_Applications: A(r,w) | PI_Assetframework: A(r) | PI_Buffer: A(r,w) | PI_Interfaces: A(r) | PI_Notifications: A(r) | PI_Perfmon: A() | PI_Vision: A(r) | PIWorld: A()" />
+		<add key="PISecurityConfiguration" value="piadmin: A(r,w) | piadmins: A(r,w) | PI_Users_Read_Only: A(r) | PI_Users_Read_Write: A(r,w) | PI_Administrators: A(r,w) | PI_Analytics: A(r) | PI_Applications: A(r,w) | PI_Assetframework: A(r) | PI_Buffer: A(r,w) | PI_Interfaces: A(r) | PI_Notifications: A(r) | PI_Perfmon: A() | PI_Vision: A(r) | PIWorld: A()" />
 		<add key="NumericalMaxPointCountAllowed" value="20000" />
 		<add key="DigitalMaxPointCountAllowed" value="10000" />
 
