--- a/Application/packages.config
+++ b/Application/packages.config
@@ -4,5 +4,7 @@
   <package id="MaterialDesignThemes" version="4.3.0" targetFramework="net48" />
   <package id="NLog" version="4.7.14" targetFramework="net48" />
   <package id="NLog.Config" version="4.7.14" targetFramework="net48" />
-  <package id="NLog.Schema" version="4.7.14" targetFramework="net48" />
+  <package id="NLog.Schema" version="4.7.15" targetFramework="net48" />
+  <package id="NLog.Windows.Forms" version="4.5.0" targetFramework="net48" />
+  <package id="NLog.Wpf.RichTextBox" version="1.0.2" targetFramework="net48" />
 </packages>
