Correction écriture multiple des logs wip

--- a/Application/Nlog.config
+++ b/Application/Nlog.config
@@ -34,10 +34,10 @@
 		  xsi:type="File"
 		  name="logfile"
 		  fileName="C:\PIReplicationTool\Logs\${shortdate}_logfile.txt"
-		  layout="${longdate}|${level:uppercase=true}|${logger}|${threadid}|${message}|${exception:format=tostring}" />
+		  layout="${longdate}|${level:uppercase=true}|${logger}|${threadid}|${message}" /> <!-- |${exception:format=tostring} -->
 
 		<!-- RichTextBox to display logs in WPF application -->
-		<target xsi:type="WPFRichTextBox"
+		<!--<target xsi:type="WPFRichTextBox"
 				name="UI"
 				layout="${level:uppercase=true}|${logger}|${message}"
 				autoScroll="false"
@@ -46,11 +46,11 @@
 				formName="WelcomeScreen"
 				allowAccessoryFormCreation="true"
 				messageRetention="None"
-				useDefaultRowColoringRules="true" />
+				useDefaultRowColoringRules="true" />-->
 	</targets>
 
 	<rules>
 		<logger name="*" minlevel="Debug" writeTo="logfile" />
-		<logger name="*" minlevel="Info" writeTo="logfile,UI" />
+		<!--<logger name="*" minlevel="Info" writeTo="logfile,UI" />-->
 	</rules>
 </nlog>
