fix thread loading attributes

--- a/Application/App.config
+++ b/Application/App.config
@@ -1,112 +1,123 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<!--<configSections>
+  <!--<configSections>
     <sectionGroup name="PIReplicationTool">
       <section name="Trigrams" type="System.Configuration.AppSettingSection, System.Configuration" />
       <section name="Trigrams" type="ConsoleApp.MyConfigurationSection, ConsoleApp" />
     </sectionGroup>
   </configSections> -->
-	<startup>
-		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
-	</startup>
-
-	<appSettings>
-		<add key="OutputPath" value="C:\PIReplicationTool\Output\" />
-		<add key="InputPath" value="C:\PIReplicationTool\Input\" />
-		<add key="LogPath" value="C:\PIReplicationTool\Output\Log" />
-		<add key="InputFileName" value="input.txt" />
-		<add key="OutputFileName_SourceTags" value="SourceTags" />
-		<add key="OutputFileName_TargetTags" value="TargetTags" />
-		<add key="fieldSeparator" value=";" />
-		<add key="PISecurityConfiguration" value="piadmin: A(r,w) | piadmins: A(r,w) | PI_Users_Read_Only: A(r) | PI_Users_Read_Write: A(r,w) | PI_Administrators: A(r,w) | PI_Analytics: A(r) | PI_Applications: A(r,w) | PI_Assetframework: A(r) | PI_Buffer: A(r,w) | PI_Interfaces: A(r) | PI_Notifications: A(r) | PI_Perfmon: A() | PI_Vision: A(r) | PIWorld: A()" />
-		<add key="NumericalMaxPointCountAllowed" value="20000" />
-		<add key="DigitalMaxPointCountAllowed" value="10000" />
-
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
+  </startup>
+  <appSettings>
+    <add key="OutputPath" value="C:\PIReplicationTool\Output\" />
+    <add key="InputPath" value="C:\PIReplicationTool\Input\" />
+    <add key="LogPath" value="C:\PIReplicationTool\Output\Log" />
+    <add key="InputFileName" value="input.txt" />
+    <add key="OutputFileName_SourceTags" value="SourceTags" />
+    <add key="OutputFileName_TargetTags" value="TargetTags" />
+    <add key="fieldSeparator" value=";" />
+    <add key="PISecurityConfiguration" value="piadmin: A(r,w) | piadmins: A(r,w) | PI_Users_Read_Only: A(r) | PI_Users_Read_Write: A(r,w) | PI_Administrators: A(r,w) | PI_Analytics: A(r) | PI_Applications: A(r,w) | PI_Assetframework: A(r) | PI_Buffer: A(r,w) | PI_Interfaces: A(r) | PI_Notifications: A(r) | PI_Perfmon: A() | PI_Vision: A(r) | PIWorld: A()" />
+    <add key="NumericalMaxPointCountAllowed" value="20000" />
+    <add key="DigitalMaxPointCountAllowed" value="10000" />
     <!--TRIGRAM KEYS-->
     <!--TEP Pau-->
-    <add key="Trigram_PI-CENTER-HQ"     value="" />
+    <add key="Trigram_PI-CENTER-HQ" value="" />
     <!--TEP Angola-->
-    <add key="Trigram_PI-DA-LAD-AO"     value="LAD" />
-    <add key="Trigram_AOEPTTA-APPIL01"  value="LAD" />
-    <add key="Trigram_PI-DA-PAZ-AO"     value="PAZ" />
-    <add key="Trigram_AOEPPAZ-APPIP01"  value="PAZ" />	
-    <add key="Trigram_PI-DA-GIR-AO"     value="GIR" />	
-    <add key="Trigram_AOEPGIR-APPIG01"  value="GIR" />
-    <add key="Trigram_PI-DA-DAL-AO"     value="DAL" />
-    <add key="Trigram_AOEPDAL-APPID02"  value="DAL" />
-    <add key="Trigram_PI-DA-CLV_AO"     value="CLV" />
-    <add key="Trigram_AOEPCLV-APPIC02"  value="CLV" />
+    <add key="Trigram_PI-DA-LAD-AO" value="LAD" />
+    <add key="Trigram_AOEPTTA-APPIL01" value="LAD" />
+    <add key="Trigram_PI-DA-PAZ-AO" value="PAZ" />
+    <add key="Trigram_AOEPPAZ-APPIP01" value="PAZ" />
+    <add key="Trigram_PI-DA-GIR-AO" value="GIR" />
+    <add key="Trigram_AOEPGIR-APPIG01" value="GIR" />
+    <add key="Trigram_PI-DA-DAL-AO" value="DAL" />
+    <add key="Trigram_AOEPDAL-APPID02" value="DAL" />
+    <add key="Trigram_PI-DA-CLV_AO" value="CLV" />
+    <add key="Trigram_AOEPCLV-APPIC02" value="CLV" />
     <!--TEP Austral-->
-    <add key="Trigram_PI-DA-AGU-AR"     value="AGU" />
-    <add key="Trigram_AREPAGU-APPI01"   value="AGU" />
-    <add key="Trigram_PI-DA-BUE-AR"     value="BUE" />
-    <add key="Trigram_AREPBUE-APPI01"   value="BUE" />
-    <add key="Trigram_PI-DA-CAL-AR"     value="CAL" />
-    <add key="Trigram_AREPCAL-APPI01"   value="CAL" />
-    <add key="Trigram_PI-DA-LLY-AR"     value="LLY" />
-    <add key="Trigram_AREPLLY-APPI01"   value="LLY" />
-    <add key="Trigram_PI-DA-RCU-AR"     value="RCU" />
-    <add key="Trigram_AREPRCU-APPI01"   value="RCU" />
+    <add key="Trigram_PI-DA-AGU-AR" value="AGU" />
+    <add key="Trigram_AREPAGU-APPI01" value="AGU" />
+    <add key="Trigram_PI-DA-BUE-AR" value="BUE" />
+    <add key="Trigram_AREPBUE-APPI01" value="BUE" />
+    <add key="Trigram_PI-DA-CAL-AR" value="CAL" />
+    <add key="Trigram_AREPCAL-APPI01" value="CAL" />
+    <add key="Trigram_PI-DA-LLY-AR" value="LLY" />
+    <add key="Trigram_AREPLLY-APPI01" value="LLY" />
+    <add key="Trigram_PI-DA-RCU-AR" value="RCU" />
+    <add key="Trigram_AREPRCU-APPI01" value="RCU" />
     <!--TEP Bolivia-->
-    <add key="Trigram_BOEPSRZ-APPI01"   value="SRZ" />
-    <add key="Trigram_PI-DA-SRZ-BO"     value="SRZ" />
+    <add key="Trigram_BOEPSRZ-APPI01" value="SRZ" />
+    <add key="Trigram_PI-DA-SRZ-BO" value="SRZ" />
     <!--TEP Brazil-->
-    <add key="Trigram_PI-DA-RIO-BR"     value="RIO" />
-    <add key="Trigram_BREPRIO-APPI01"   value="RIO" />
-    <add key="Trigram_PI-DA-LAP-BR"     value="LAP" />
-    <add key="Trigram_BREPLAP-APPI01"   value="LAP" />
+    <add key="Trigram_PI-DA-RIO-BR" value="RIO" />
+    <add key="Trigram_BREPRIO-APPI01" value="RIO" />
+    <add key="Trigram_PI-DA-LAP-BR" value="LAP" />
+    <add key="Trigram_BREPLAP-APPI01" value="LAP" />
     <!--TEP Brunei-->
-    <add key="Trigram_PI-DA-BNP-BR"     value="BNP" />
-    <add key="Trigram_BNEPLUM-AP05"     value="BNP" />
+    <add key="Trigram_PI-DA-BNP-BR" value="BNP" />
+    <add key="Trigram_BNEPLUM-AP05" value="BNP" />
     <!--TEP Congo-->
-    <add key="Trigram_PI-DA-PNR-CG"     value="PNR" />
-    <add key="Trigram_CGEPBIN-APPI04"   value="PNR" />
+    <add key="Trigram_PI-DA-PNR-CG" value="PNR" />
+    <add key="Trigram_CGEPBIN-APPI04" value="PNR" />
     <!--TEP Danemark-->
-    <add key="Trigram_PI-DA-EBJ-DK"     value="EBJ" />
-    <add key="Trigram_DKEPEBJ-APPIHS1"  value="EBJ" />
-    <add key="Trigram_DKEPEBJ-APPIHS2"  value="EBJ" />
+    <add key="Trigram_PI-DA-EBJ-DK" value="EBJ" />
+    <add key="Trigram_DKEPEBJ-APPIHS1" value="EBJ" />
+    <add key="Trigram_DKEPEBJ-APPIHS2" value="EBJ" />
     <!--TEP Gabon-->
-    <add key="Trigram_PI-DA-POG-GA"     value="POG" />
-    <add key="Trigram_GAEPPOG-PIS01"    value="POG" />
+    <add key="Trigram_PI-DA-POG-GA" value="POG" />
+    <add key="Trigram_GAEPPOG-PIS01" value="POG" />
     <!--TEP Italy-->
-    <add key="Trigram_PI-DA-COR-IT"     value="COR" />
-    <add key="Trigram_ITEPCOR-AP03"     value="COR" />
+    <add key="Trigram_PI-DA-COR-IT" value="COR" />
+    <add key="Trigram_ITEPCOR-AP03" value="COR" />
     <!--TEP Myanmar-->
-    <add key="Trigram_PI-DA-RNG-MM"     value="RGN" />
-    <add key="Trigram_MMEPRGN-APPI01"   value="RGN" />
-    <add key="Trigram_PI-DA-YDN-MM"     value="YDN" />
-    <add key="Trigram_MMEPYDN-APPI01"   value="YDN" />
+    <add key="Trigram_PI-DA-RNG-MM" value="RGN" />
+    <add key="Trigram_MMEPRGN-APPI01" value="RGN" />
+    <add key="Trigram_PI-DA-YDN-MM" value="YDN" />
+    <add key="Trigram_MMEPYDN-APPI01" value="YDN" />
     <!--TEP Netherland-->
-    <add key="Trigram_NL-DHG-PI"        value="DHG" />
-    <add key="Trigram_NLEPDHG-PI01"     value="DHG" />
-    <add key="Trigram_NLEPDHG-PI02"     value="DHG" />
-    <add key ="Tag_Prefixe_DHG" value ="NL_"/>
+    <add key="Trigram_NL-DHG-PI" value="DHG" />
+    <add key="Trigram_NLEPDHG-PI01" value="DHG" />
+    <add key="Trigram_NLEPDHG-PI02" value="DHG" />
+    <add key="Tag_Prefixe_DHG" value="NL_" />
     <!--TEP Nigeria DW-->
-    <add key="Trigram_PI-DA-AKP-NG"     value="AKP" />
+    <add key="Trigram_PI-DA-AKP-NG" value="AKP" />
     <add key="Trigram_AKPO-OPS-COLLECTIVE2" value="AKP" />
-    <add key="Trigram_NGEPAKP-APPIS01"  value="AKP" />
-    <add key="Trigram_NGEPAKP-APPIS02"  value="AKP" />
-    <add key="Trigram_PI-DA-EGN-NG"     value="EGN" />
-    <add key="Trigram_NGEPEGN-APPIS01"  value="EGN" />
-    <add key="Trigram_PI-DA-LOS-NG"     value="LOS" />
-    <add key="Trigram_NGEPLOS-APPIS01"  value="LOS" />
+    <add key="Trigram_NGEPAKP-APPIS01" value="AKP" />
+    <add key="Trigram_NGEPAKP-APPIS02" value="AKP" />
+    <add key="Trigram_PI-DA-EGN-NG" value="EGN" />
+    <add key="Trigram_NGEPEGN-APPIS01" value="EGN" />
+    <add key="Trigram_PI-DA-LOS-NG" value="LOS" />
+    <add key="Trigram_NGEPLOS-APPIS01" value="LOS" />
     <!--TEP Nigeria JV-->
-    <add key="Trigram_PI-DA-AMQ-NG"     value="AMQ" />
-    <add key="Trigram_NGEPAMQ-APPI01"   value="AMQ" />
-    <add key="Trigram_PI-DA-OBG-NG"     value="OBG" />
-    <add key="Trigram_NGEPOBG-AP02"     value="OBG" />
-    <add key="Trigram_PI-DA-PHC-NG"     value="PHC" />
-    <add key="Trigram_NGEPPHC-APPI01"   value="PHC" />
+    <add key="Trigram_PI-DA-AMQ-NG" value="AMQ" />
+    <add key="Trigram_NGEPAMQ-APPI01" value="AMQ" />
+    <add key="Trigram_PI-DA-OBG-NG" value="OBG" />
+    <add key="Trigram_NGEPOBG-AP02" value="OBG" />
+    <add key="Trigram_PI-DA-PHC-NG" value="PHC" />
+    <add key="Trigram_NGEPPHC-APPI01" value="PHC" />
     <!--TEP Norvege-->
-    <add key="Trigram_PI-DA-SVG-NO"     value="SVG" />
-    <add key="Trigram_NOEPSVG-APPI02"   value="SVG" />
+    <add key="Trigram_PI-DA-SVG-NO" value="SVG" />
+    <add key="Trigram_NOEPSVG-APPI02" value="SVG" />
     <!--TEP Qatar-->
-    <add key="Trigram_PI-DA-DOH-QA"     value="DOH" />
-    <add key="Trigram_QAEPDOH-WPPI01"   value="DOH" />
-    <add key="Trigram_QAEPTRC-WPPI02"   value="DOH" />
+    <add key="Trigram_PI-DA-DOH-QA" value="DOH" />
+    <add key="Trigram_QAEPDOH-WPPI01" value="DOH" />
+    <add key="Trigram_QAEPTRC-WPPI02" value="DOH" />
     <!--TEP United Kingdom-->
-    <add key="Trigram_UK-ABZ-MIS"       value="ABZ" />
-    <add key="Trigram_GBEPABZ-APMIS01"  value="ABZ" />
-    <add key="Trigram_GBEPABZ-APMIS02"  value="ABZ" />
+    <add key="Trigram_UK-ABZ-MIS" value="ABZ" />
+    <add key="Trigram_GBEPABZ-APMIS01" value="ABZ" />
+    <add key="Trigram_GBEPABZ-APMIS02" value="ABZ" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
 </configuration>
